<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, KeepingInMusicalTouchActivity!</string>
    <string name="app_name">Keeping In Musical Touch</string>
    <string name="showBtn">Show</string>
    <string name="httpPort">80</string>
    <string name="dumpString">Receiving Data</string>
    <string name="back">Back</string>
    <string name="title">HTML Content</string>
    <string name="formattedString">Formatted XML Data</string>
    <string name="defaultAddress">HASH0151f62687a74edac75640ee</string>
    <string name="btnBack">Back</string>
    <string name="btnForward">Forward</string>
    <string name="btnLoad">Load</string>
    <string name="defaultLibraryLocation">http://willsam100.info:8383/greenstone3</string>
    <string name="btnSetLibrary">Set Library</string>
    <string name="txtLogin">Login</string>
    <string name="txtIntroduction">Please enter the location of your \'Keeping In Musical Touch\' server:</string>
    <string name="librarySelect">Select Library Type</string>
    <string name="kimt_ip">willsam100.info</string>
    <string name="kimt_port">55936</string>
</resources>
