<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout android:id="@+id/linearLayout1"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	xmlns:android="http://schemas.android.com/apk/res/android">
	<LinearLayout android:id="@+id/linearLayout2" android:orientation="vertical"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
		<TextView android:id="@+id/textView1" android:textAppearance="?android:attr/textAppearanceLarge"
			android:text="@string/txtLogin" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="0dp"/>
		<TextView android:id="@+id/textView2" android:textAppearance="?android:attr/textAppearanceMedium"
			android:text="@string/txtIntroduction" android:layout_width="wrap_content" android:layout_weight="1" android:layout_height="0dp" android:layout_marginBottom="10dip"/>
		<LinearLayout android:id="@+id/linearLayout3" android:weightSum="1" android:layout_weight="1" android:layout_height="0dp" android:layout_width="fill_parent" android:baselineAligned="false">
			<AutoCompleteTextView android:id="@+id/autoCompleteTextViewLibraryLocation" android:layout_height="fill_parent" android:maxLines="1" android:hint="Location" android:text="@string/defaultLibraryLocation" android:layout_width="fill_parent" android:layout_weight="0.25">
				<requestFocus></requestFocus>
			</AutoCompleteTextView>
			<EditText android:id="@+id/editText1" android:inputType="number" android:maxLines="1" android:hint="Code" android:layout_gravity="right" android:layout_height="fill_parent" android:layout_width="fill_parent" android:layout_weight="0.750"></EditText>
		</LinearLayout>
		<Button android:id="@+id/btnSetLibrary" android:text="@string/btnSetLibrary" android:layout_weight="1" android:layout_height="0dp" android:layout_marginTop="10dip" android:layout_width="wrap_content" android:layout_gravity="center"/>
	</LinearLayout>
</LinearLayout>
