<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:weightSum="1">
<LinearLayout 
	android:layout_width="fill_parent" 
	android:id="@+id/linearLayout1" 
	android:layout_height="wrap_content" 
	
	android:orientation="horizontal"
	android:gravity="right"
	android:padding="2dp">
	<LinearLayout
		android:layout_width="195dp" 
		android:id="@+id/linearLayout1" 
		android:layout_height="wrap_content" 
		android:weightSum="1"
		android:orientation="vertical"
		android:gravity="left"
		android:padding="2dp">
	    <Button 
			    android:layout_height="wrap_content" 
			    android:layout_width="wrap_content" 
			    android:text="@string/btnBack" 
			    android:id="@+id/btnBack"
			    android:gravity="left"
			    android:layout_gravity="left">
		    </Button>
		    
		</LinearLayout>
    <LinearLayout
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content" 
		android:gravity="right"
		android:layout_gravity="right">
		    <Button 
			    android:layout_height="wrap_content" 
			    android:layout_width="wrap_content" 
			    android:text="@string/showBtn" 
			    android:id="@+id/btnShow"
			    android:gravity="right"
			    android:layout_gravity="right">
		    </Button>
	    </LinearLayout> 
	    <LinearLayout 
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="right"
		android:layout_gravity="right">
		<Button 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/btnLoad"
			android:text="@string/btnLoad"
			android:gravity="right"
			android:layout_gravity="right">
			
		</Button>
	</LinearLayout>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="fill_parent">
	<WebView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:visibility="invisible"
		android:id="@+id/myWebView">
		
	</WebView>
	</LinearLayout>
		
</LinearLayout>
